# medion-task

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn_conf.py  manage.py  pyproject.toml  pytest.ini  sample.env
medion_technical_task/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_signup_signin.py  test_simple.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_employeeposition_employee_position_id_and_more.py  0003_alter_user_username.py
utils/decorators/: __init__.py  single_task.py
utils/fields/: __init__.py  image_field.py
utils/functions/: __init__.py  generate_upload_name.py  transliteration.py
utils/serializers/: __init__.py
